Archive2/75/cff98f36506f89/output
main.cpp:5:10: error: no member named 'integer_sequence' in namespace 'std'
    std::integer_sequence<int, 1, 2, 3> t;
    ~~~~~^
main.cpp:5:30: error: expected '(' for function-style cast or type construction
    std::integer_sequence<int, 1, 2, 3> t;
                          ~~~^
main.cpp:5:41: error: use of undeclared identifier 't'
    std::integer_sequence<int, 1, 2, 3> t;
                                        ^
3 errors generated.
