Archive2/75/cff98f36506f89/main.cpp
#include <utility>

int main()
{
    std::integer_sequence<int, 1, 2, 3> t;
}